; ModuleID = '/home/carl/AnghaBench/freebsd/stand/efi/libefi/extr_efi_console.c_efi_cons_putchar.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/efi/libefi/extr_efi_console.c_efi_cons_putchar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mode = common dso_local global i32 0, align 4
@RB_SERIAL = common dso_local global i32 0, align 4
@buffer = common dso_local global i32* null, align 8
@teken = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @efi_cons_putchar(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8, align 1
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = trunc i32 %4 to i8
  store i8 %5, i8* %3, align 1
  %6 = load i32, i32* @mode, align 4
  %7 = load i32, i32* @RB_SERIAL, align 4
  %8 = and i32 %6, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i8, i8* %3, align 1
  %12 = call i32 @input_byte(i8 zeroext %11)
  br label %21

13:                                               ; preds = %1
  %14 = load i32*, i32** @buffer, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %16, label %18

16:                                               ; preds = %13
  %17 = call i32 @teken_input(i32* @teken, i8* %3, i32 1)
  br label %21

18:                                               ; preds = %13
  %19 = load i32, i32* %2, align 4
  %20 = call i32 @efi_cons_efiputchar(i32 %19)
  br label %21

21:                                               ; preds = %10, %18, %16
  ret void
}

declare dso_local i32 @input_byte(i8 zeroext) #1

declare dso_local i32 @teken_input(i32*, i8*, i32) #1

declare dso_local i32 @efi_cons_efiputchar(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
